--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ target 'MedCare' do
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
 
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
   target 'MedCareTests' do
     inherit! :complete
     # Pods for testing
